# inchi

./: .gitignore  CMakeLists.txt
INCHI_API/: CMakeLists.txt
INCHI_API/include/: inchi_dll_a.h
INCHI_API/include/ixa/: ixa_mol.h  ixa_status.h
INCHI_API/src/: ichilnct.c  inchi_dll.c  inchi_dll_a.c  inchi_dll_a2.c  inchi_dll_b.c
INCHI_API/src/ixa/: ixa_builder.c  ixa_inchikey_builder.c  ixa_mol.c  ixa_read_inchi.c  ixa_read_mol.c  ixa_status.c
INCHI_API/test/ixa/: test_ixa.c
INCHI_BASE/: CMakeLists.txt
INCHI_BASE/include/: ichiparm.h
INCHI_BASE/src/: mol2atom.c  runichi3.c  runichi4.c  strutil.c
INCHI_DEMOS/: CMakeLists.txt
INCHI_DEMOS/inchi_main/: CMakeLists.txt
INCHI_DEMOS/inchi_main/include/: aux2atom.h  e_ctl_data.h  e_ichi_io.h  e_ichi_parms.h  e_ichisize.h  e_ichitime.h  e_inpdef.h  e_mode.h  e_readstru.h
INCHI_DEMOS/inchi_main/src/: e_0dstereo.c  e_ichi_io.c  e_ichi_parms.c  e_ichimain.c  e_ichimain_a.c  e_inchi_atom.c  e_mol2atom.c  e_readinch.c  e_readmol.c  e_readstru.c  e_util.c
INCHI_DEMOS/mol2inchi/: CMakeLists.txt
INCHI_DEMOS/mol2inchi/src/: mol2inchi.c
INCHI_EXE/: CMakeLists.txt
INCHI_EXE/src/: dispstru.c  ichimain.c
